Migrated 2 recipes and almost all block entities