@@ -1,7 +1,9 @@
 package net.sinedkadis.terracompositio.block.entity;
 
 import net.minecraft.core.BlockPos;
+import net.minecraft.core.HolderLookup;
 import net.minecraft.nbt.CompoundTag;
+import net.minecraft.resources.ResourceKey;
 import net.minecraft.server.level.ServerLevel;
 import net.minecraft.sounds.SoundEvents;
 import net.minecraft.sounds.SoundSource;
@@ -9,14 +11,17 @@ import net.minecraft.world.item.ItemStack;
 import net.minecraft.world.level.Level;
 import net.minecraft.world.level.LevelAccessor;
 import net.minecraft.world.level.block.state.BlockState;
+import net.minecraft.world.level.storage.loot.BuiltInLootTables;
 import net.minecraft.world.level.storage.loot.LootParams;
+import net.minecraft.world.level.storage.loot.LootTable;
+import net.minecraft.world.level.storage.loot.parameters.LootContextParamSets;
 import net.minecraft.world.level.storage.loot.parameters.LootContextParams;
-import net.minecraftforge.event.level.BlockEvent;
-import net.minecraftforge.eventbus.api.SubscribeEvent;
-import net.minecraftforge.fluids.capability.IFluidHandler;
-import net.minecraftforge.fluids.capability.templates.FluidTank;
-import net.minecraftforge.fml.common.Mod;
-import net.minecraftforge.items.ItemStackHandler;
+import net.neoforged.bus.api.SubscribeEvent;
+import net.neoforged.fml.common.EventBusSubscriber;
+import net.neoforged.neoforge.event.level.block.CropGrowEvent;
+import net.neoforged.neoforge.fluids.capability.IFluidHandler;
+import net.neoforged.neoforge.fluids.capability.templates.FluidTank;
+import net.neoforged.neoforge.items.ItemStackHandler;
 import net.sinedkadis.terracompositio.TerraCompositio;
 import net.sinedkadis.terracompositio.api.TerraCompositioAPI;
 import net.sinedkadis.terracompositio.api.networks.ecf.ECFNetwork;
@@ -25,15 +30,16 @@ import net.sinedkadis.terracompositio.registries.TCBlockEntities;
 
 import net.sinedkadis.terracompositio.util.IEntityInstance;
 import net.sinedkadis.terracompositio.util.helpers.ParticleHelperInternal;
-import org.jetbrains.annotations.NotNull;
 
+import javax.annotation.ParametersAreNonnullByDefault;
 import java.util.Collections;
 import java.util.List;
 import java.util.Objects;
 import java.util.Set;
 import java.util.stream.Collectors;
 
-@Mod.EventBusSubscriber(modid = TerraCompositio.MOD_ID, bus = Mod.EventBusSubscriber.Bus.FORGE)
+@ParametersAreNonnullByDefault
+@EventBusSubscriber(modid = TerraCompositio.MOD_ID)
 public class CultivationDesorberBlockEntity extends AbstractDesorberBlockEntity {
 
     private final ItemStackHandler renderStack = new ItemStackHandler();
@@ -55,22 +61,8 @@ public class CultivationDesorberBlockEntity extends AbstractDesorberBlockEntity 
         return this.renderStack.getStackInSlot(0);
     }
 
-    @Override
-    protected void saveAdditional(@NotNull CompoundTag pTag) {
-        pTag.put("render", renderStack.serializeNBT());
-        super.saveAdditional(pTag);
-    }
-
-    @Override
-    public void load(@NotNull CompoundTag pTag) {
-        super.load(pTag);
-        renderStack.deserializeNBT(pTag.getCompound("render"));
-    }
-
-
-
     @SubscribeEvent
-    public static void onCropGrowEvent(BlockEvent.CropGrowEvent event){
+    public static void onCropGrowEvent(CropGrowEvent.Post event) {
         BlockPos pos = event.getPos();
         LevelAccessor level = event.getLevel();
         BlockState state = event.getState();
@@ -106,15 +98,40 @@ public class CultivationDesorberBlockEntity extends AbstractDesorberBlockEntity 
                         blockEntity.ecfContainer().getOffset().apply(blockEntity.getBlockPos().getCenter()),
                         pos.getCenter(),
                         added);
-                //noinspection deprecation
-                blockEntity.setRenderStack(new ItemStack(state.getBlock()
-                        .getDrops(state,new LootParams.Builder((ServerLevel) level)
+                blockEntity.setRenderStack(new ItemStack(
+                        getDrops(state, new LootParams.Builder((ServerLevel) level)
                                 .withParameter(LootContextParams.ORIGIN,pos.getCenter())
-                                .withParameter(LootContextParams.TOOL,ItemStack.EMPTY)).get(0).getItem().asItem()));
+                                .withParameter(LootContextParams.TOOL, ItemStack.EMPTY))
+                                .getFirst().getItem().asItem())
+                );
                 if (ECFToAdd == 0) {
                     break;
                 }
             }
         }
+    }
+
+    protected static List<ItemStack> getDrops(BlockState state, LootParams.Builder params) {
+        ResourceKey<LootTable> resourcekey = state.getBlock().getLootTable();
+        if (resourcekey == BuiltInLootTables.EMPTY) {
+            return Collections.emptyList();
+        } else {
+            LootParams lootparams = params.withParameter(LootContextParams.BLOCK_STATE, state).create(LootContextParamSets.BLOCK);
+            ServerLevel serverlevel = lootparams.getLevel();
+            LootTable loottable = serverlevel.getServer().reloadableRegistries().getLootTable(resourcekey);
+            return loottable.getRandomItems(lootparams);
+        }
+    }
+
+    @Override
+    protected void saveAdditional(CompoundTag tag, HolderLookup.Provider registries) {
+        tag.put("render", renderStack.serializeNBT(registries));
+        super.saveAdditional(tag, registries);
+    }
+
+    @Override
+    protected void loadAdditional(CompoundTag tag, HolderLookup.Provider registries) {
+        renderStack.deserializeNBT(registries, tag.getCompound("render"));
+        super.loadAdditional(tag, registries);
     }
 }
