@@ -3,14 +3,17 @@ package net.sinedkadis.terracompositio.block.entity;
 import net.minecraft.MethodsReturnNonnullByDefault;
 import net.minecraft.core.BlockPos;
 import net.minecraft.core.Direction;
+import net.minecraft.core.RegistryAccess;
 import net.minecraft.server.level.ServerLevel;
-import net.minecraft.world.SimpleContainer;
 import net.minecraft.world.item.ItemStack;
+import net.minecraft.world.item.crafting.RecipeHolder;
 import net.minecraft.world.level.Level;
 import net.minecraft.world.level.block.state.BlockState;
-import net.minecraftforge.common.capabilities.ForgeCapabilities;
-import net.minecraftforge.items.IItemHandlerModifiable;
-import net.minecraftforge.items.wrapper.EmptyHandler;
+import net.neoforged.neoforge.capabilities.Capabilities;
+import net.neoforged.neoforge.items.IItemHandler;
+import net.neoforged.neoforge.items.IItemHandlerModifiable;
+import net.neoforged.neoforge.items.wrapper.EmptyItemHandler;
+import net.neoforged.neoforge.items.wrapper.RecipeWrapper;
 import net.sinedkadis.terracompositio.api.networks.ecf.IECFHandler;
 import net.sinedkadis.terracompositio.block.behaviours.ECFHandlerBehaviour;
 import net.sinedkadis.terracompositio.block.behaviours.ItemHandlerBehaviour;
@@ -75,27 +78,22 @@ public class FlowInfuserBlockEntity extends TCCraftingBlockEntity {
     }
 
     public boolean hasRecipe() {
-        Optional<FlowInfusionRecipe> recipe = getCurrentRecipe();
+        Optional<RecipeHolder<FlowInfusionRecipe>> recipe = getCurrentRecipe();
         if (recipe.isEmpty()){
             return false;
         }
-        ItemStack result = recipe.get().getResultItem(null);
+        ItemStack result = recipe.get().value().getResultItem(RegistryAccess.EMPTY);
         boolean outputTest = enoughSpaceInOutput(result.getCount()) && sameItemInOutput(result.getItem());
         if (outputTest){
-            maxProgress = recipe.get().getTicks();
-            tickECFCost = recipe.get().getECFTick();
+            maxProgress = recipe.get().value().getTicks();
+            tickECFCost = recipe.get().value().getECFTick();
         }
         return outputTest;
     }
 
-    protected Optional<FlowInfusionRecipe> getCurrentRecipe() {
-        SimpleContainer inventory = new SimpleContainer(this.getItemHandler().getSlots());
-        for (int i = 0; i < getItemHandler().getSlots(); i++) {
-            inventory.setItem(i, this.getItemHandler().getStackInSlot(i));
-        }
-
+    protected Optional<RecipeHolder<FlowInfusionRecipe>> getCurrentRecipe() {
         assert this.level != null;
-        return this.level.getRecipeManager().getRecipeFor(FlowInfusionRecipe.Type.INSTANCE, inventory, level);
+        return this.level.getRecipeManager().getRecipeFor(FlowInfusionRecipe.Type.INSTANCE, new RecipeWrapper(getItemHandler()), level);
     }
 
     @Override
@@ -105,11 +103,14 @@ public class FlowInfuserBlockEntity extends TCCraftingBlockEntity {
 
     @Override
     protected IItemHandlerModifiable getItemHandler() {
-        return (IItemHandlerModifiable) getCapability(ForgeCapabilities.ITEM_HANDLER).orElse(EmptyHandler.INSTANCE);
+        if (level != null) {
+            return (IItemHandlerModifiable) level.getCapability(Capabilities.ItemHandler.BLOCK, worldPosition, null);
+        }
+        return (IItemHandlerModifiable) EmptyItemHandler.INSTANCE;
     }
 
     protected IECFHandler ecfContainer() {
-        return ((ECFHandlerBehaviour) behaviours.get(0)).getMainHandler();
+        return ((ECFHandlerBehaviour) behaviours.getFirst()).getMainHandler();
     }
 
 
@@ -125,21 +126,21 @@ public class FlowInfuserBlockEntity extends TCCraftingBlockEntity {
 
 
     protected void craftItem() {
-        Optional<FlowInfusionRecipe> recipe = getCurrentRecipe();
-        if (recipe.isPresent()) {
-            ItemStack result = recipe.get().getResultItem(null);
-            this.getCapability(ForgeCapabilities.ITEM_HANDLER).ifPresent(iItemHandler -> {
-                if (iItemHandler instanceof IItemHandlerModifiable modifiable) {
-                    ItemStack copy = modifiable.getStackInSlot(0).copy();
-                    copy.shrink(1);
-                    modifiable.setStackInSlot(0, copy);
-                    modifiable.setStackInSlot(1, result.copy());
-                    if (level != null) {
-                        BlockState blockState = getBlockState();
-                        level.sendBlockUpdated(worldPosition, blockState, blockState, 3);
-                    }
+        Optional<RecipeHolder<FlowInfusionRecipe>> recipe = getCurrentRecipe();
+        if (recipe.isPresent() && level != null) {
+            ItemStack result = recipe.get().value().getResultItem(level.registryAccess());
+            IItemHandler iItemHandler = level.getCapability(Capabilities.ItemHandler.BLOCK, worldPosition, null);
+            if (iItemHandler instanceof IItemHandlerModifiable modifiable) {
+                ItemStack copy = modifiable.getStackInSlot(0).copy();
+                copy.shrink(1);
+                modifiable.setStackInSlot(0, copy);
+                modifiable.setStackInSlot(1, result.copy());
+                if (level != null) {
+                    BlockState blockState = getBlockState();
+                    level.sendBlockUpdated(worldPosition, blockState, blockState, 3);
                 }
-            });
+            }
+
         }
     }
 
